<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">长沙通</string>
	<string name="login">登录</string>
	<string name="im_login">登录聊天系统</string>
	<string name="register">注册</string>
	<string name="userName">用户名</string>
	<string name="userPwd">密码</string>
	<string name="rem_pwd">记住密码</string>
	<string name="firm_pwd">确认密码</string>
	<string name="agreement">同意注册协议</string>
	<string name="email">邮箱,用于找回密码</string>
	<string name="find_pwd">找回密码</string>
	<string name="userMobile">手机号</string>
	<string name="share_desc">分享什么呢</string>
	<string name="agreement_name">用户注册协议</string>
	<string name="error_agreement">请阅读用户协议条款并同意!</string>
	<string name="setting_user_info">个人信息</string>
	<string name="setting_pwd">修改密码</string>
	<string name="modify_pwd_name">修改密码</string>
	<string name="user_pwd">旧密码</string>
	<string name="user_newpwd">新密码</string>
	<string name="user_newpwd2">确认新密码</string>
	<string name="user_email">邮箱</string>
	<string name="error_name">请输入用户名！</string>
	<string name="error_name_length1">用户名长度不能少于3个字符</string>
	<string name="error_name_length2">用户名长度不能超过15个字符</string>
	<string name="error_name_expr">用户名只能是字母、数字、中文</string>
	<string name="error_pwd">请输入密码！</string>
	<string name="error_pwd_match">两次密码输入不一致！</string>
	<string name="error_pwd_length1">密码长度不能少于6个字符</string>
	<string name="error_pwd_length2">密码长度不能超过20个字符</string>
	<string name="error_pwd_expr">密码只能是字母和数字</string>
	<string name="error_pwd_old">请输入旧密码！</string>
	<string name="error_pwd_new">请输入新密码！</string>
	<string name="error_email">请输入邮箱！</string>
	<string name="error_email_expr">邮箱格式不正确!</string>
	<string name="error_email_expr2">邮箱不能输入中文!</string>
	<string name="error_nickname">请输入昵称！</string>
	<string name="error_nickname_length1">昵称长度不能少于3个字符</string>
	<string name="error_nickname_length2">昵称长度不能超过20个字符</string>
	<string name="error_nickname_expr">昵称格式不正确</string>
	<string name="error_city">请输入城市！</string>
	<string name="error_city_length1">城市长度不能少于2个字符</string>
	<string name="error_city_length2">城市长度不能超过20个字符</string>
	<string name="error_city_expr">城市格式不正确</string>
	<string name="error_intro_length1">个人说明长度不能少于2个字符</string>
	<string name="error_intro_length2">个人说明长度不能超过80个字符</string>
	<string name="error_age">请输入年龄！</string>
	<string name="error_age_length1">年龄不能小于0</string>
	<string name="error_age_length2">年龄不能大于100个字符</string>
	<string name="error_age_expr">年龄必须为数字</string>
	<string name="error_params_expr">包含不支持的文字格式!</string>
	<string name="error_mobile">请输入正确的手机号码!</string>
	<string name="register_name">新用户注册</string>
	<string name="msg_login_success">登录成功</string>
	<string name="msg_login_fail">登录失败</string>
	<string name="msg_register_success">注册成功</string>
	<string name="msg_register_fail">注册失败</string>
	<string name="clear_cache">清除缓存</string>
	<string name="logout">退出当前帐号</string>
	<string name="settings">设置</string>
	<string name="search">搜索</string>
	<string name="mythreads">我的帖子</string>
	<string name="profile">我的小窝</string>
	<string name="msg">消息</string>
	<string name="mymsg">我的消息</string>
	<string name="notice">通知</string>
	<string name="chat">私信</string>
	<string name="hint_reply">写点什么</string>
	<string name="hint_post_title">标题(必填)</string>
	<string name="reply_send">发  送</string>
	<string name="post_title">发表主题</string>
	<string name="post_publish">发布</string>
	<string name="photo_select">选择照片</string>
	<string name="photo_use">使用照片</string>
	<string name="photo_take">拍照</string>
	<string name="photo_retake">重新拍照</string>
	<string name="complete">完成</string>
	<string name="cancel">取消</string>
	<string name="ok">确定</string>
	<string name="publish">发贴</string>
	<string name="refresh">无数据，按此刷新</string>

</resources>