<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_margin="10dip"
		android:orientation="vertical" >

		<View
			android:layout_width="fill_parent"
			android:layout_height="20dip"
			android:focusable="true"
			android:focusableInTouchMode="true" />

		<RelativeLayout
			android:id="@+id/layout01"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<EditText
				android:id="@+id/userName"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:hint="@string/userName"
				android:inputType="text"
				android:maxLength="20"
				android:paddingBottom="10dip"
				android:singleLine="true"
				android:textColor="@color/gray_text"
				android:textSize="18sp" />

			<ImageButton
				android:id="@+id/clearName"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:layout_marginRight="10dip"
				android:background="@drawable/clear_icon"
				android:visibility="invisible" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/layout02"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<EditText
				android:id="@+id/userPwd"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:hint="@string/userPwd"
				android:inputType="textPassword"
				android:maxLength="20"
				android:paddingBottom="10dip"
				android:singleLine="true"
				android:textColor="@color/gray_text"
				android:textSize="18sp" >
			</EditText>

			<ImageButton
				android:id="@+id/clearPwd"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:layout_marginRight="10dip"
				android:background="@drawable/clear_icon"
				android:visibility="invisible" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/layout03"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<EditText
				android:id="@+id/userEmail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:hint="@string/user_email"
				android:inputType="textEmailAddress"
				android:maxLength="20"
				android:paddingBottom="10dip"
				android:singleLine="true"
				android:textColor="@color/gray_text"
				android:textSize="18sp" >
			</EditText>

			<ImageButton
				android:id="@+id/clearEmail"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:layout_marginRight="10dip"
				android:background="@drawable/clear_icon"
				android:visibility="invisible" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/layout04"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<EditText
				android:id="@+id/userMobile"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical"
				android:hint="@string/userMobile"
				android:inputType="phone"
				android:maxLength="20"
				android:paddingBottom="10dip"
				android:singleLine="true"
				android:textColor="@color/gray_text"
				android:textSize="18sp" >
			</EditText>

			<ImageButton
				android:id="@+id/clearMobile"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"
				android:layout_centerVertical="true"
				android:layout_marginRight="10dip"
				android:background="@drawable/clear_icon"
				android:visibility="invisible" />
		</RelativeLayout>

		<LinearLayout
			android:id="@+id/btnLayout"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" >

			<Button
				android:id="@+id/registerBtn"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@color/green"
				android:padding="10dip"
				android:text="@string/register"
				android:textColor="@color/white"
				android:textSize="20sp" />
		</LinearLayout>
	</LinearLayout>

</ScrollView>